syntax = "proto3";
package nodes;

option go_package = "github.com/snple/beacon/pb/nodes;nodes";

import "generic_message.proto";

message SyncUpdated {
    string id = 1;
    int64 updated = 2;
}

service SyncService {
    rpc SetNodeUpdated(SyncUpdated) returns (pb.MyBool) {}
    rpc GetNodeUpdated(pb.MyEmpty) returns (SyncUpdated) {}
    rpc WaitNodeUpdated(pb.MyEmpty) returns (stream pb.MyBool) {}

    rpc SetPinValueUpdated(SyncUpdated) returns (pb.MyBool) {}
    rpc GetPinValueUpdated(pb.MyEmpty) returns (SyncUpdated) {}
    rpc WaitPinValueUpdated(pb.MyEmpty) returns (stream pb.MyBool) {}

    rpc SetPinWriteUpdated(SyncUpdated) returns (pb.MyBool) {}
    rpc GetPinWriteUpdated(pb.MyEmpty) returns (SyncUpdated) {}
    rpc WaitPinWriteUpdated(pb.MyEmpty) returns (stream pb.MyBool) {}
}
